# rover_simulation

./: .gitignore  LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_control_moveit_config/share/arm_control_moveit_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_moveit_config/share/arm_moveit_config/: .setup_assistant  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_moveit_config/share/control_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/control_msgs/share/control_msgs/: local_setup.sh  package.sh
install/gazebo_ros2_control/share/gazebo_ros2_control/: package.sh
install/my_bot/share/my_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_bot/share/my_bot/arm_control_moveit_config/: launch_sim.launch.py
install/my_bot/share/my_bot/arm_moveit_config/: arm.urdf  arm_sim.launch.py
install/my_bot/share/my_bot/config/: arm_controllers.yaml  moveit_controllers.yaml  my_controllers.yaml
install/my_bot/share/my_bot/description/: arm.urdf  arm.urdf.xacro  arm.xacro  arm_gazebo.urdf.xacro  arm_hardware.urdf.xacro  macros.xacro  robot.urdf.xacro  robot_arm.srdf
install/my_bot/share/my_bot/launch/: arm_gazebo.launch.py  arm_sim.launch.py  hardware.launch.py  launch_sim.launch.py  sim.launch.py
log/: latest_build  latest_list
src/arm_control_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_control_moveit_config/config/: arm.urdf.xacro  arm_gazebo.urdf.xacro  arm_hardware.urdf.xacro  chomp_planning.yaml  initial_positions.yaml  macros.xacro  moveit_controllers.yaml  ompl_planning.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml
src/arm_control_moveit_config/launch/: arm.launch.py  final.launch.py  hardware.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  simulation.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_controller/: CMakeLists.txt  arm_controller.xml  package.xml
src/arm_controller/include/arm_controller/: arm_controller.cpp.hpp  arm_controller.hpp  validate_arm_controller.cpp_parameters.hpp  validate_arm_controller_parameters.hpp  visibility_control.h
src/arm_controller/src/: arm_controller.cpp  arm_controller.cpp.cpp  arm_controller.cpp.yaml  arm_controller.yaml
src/arm_controller/test/: arm_controller.cpp_params.yaml  arm_controller.cpp_preceeding_params.yaml  arm_controller_params.yaml  arm_controller_preceeding_params.yaml  test_arm_controller.cpp  test_arm_controller.cpp.cpp  test_arm_controller.cpp.hpp  test_arm_controller.cpp_preceeding.cpp  test_arm_controller.hpp  test_arm_controller_preceeding.cpp  test_load_arm_controller.cpp  test_load_arm_controller.cpp.cpp
src/arm_hardware_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_hardware_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml
src/arm_hardware_moveit_config/launch/: demo.launch.py  hardware.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_moveit_config/: CMakeLists.txt  moveitPosePub.cpp  package.xml
src/arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/arm_moveit_config/launch/: move_group.launch.py  setup_assistant.launch.py
src/control_moveit_config/: .setup_assistant  CMakeLists.txt
src/control_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  robot_arm.srdf  ros2_controllers.yaml
src/control_moveit_config/launch/: demo.launch.py  final2.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
src/hello_moveit/src/: hello_moveit.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/moveit_servo/: CMakeLists.txt
src/my_bot/: package.xml  setup.py  simulation_installer.bash
src/my_bot/config/: arm_controllers.yaml  arm_gazebo_controllers.yaml  joint_limits.yaml  twist_mux.yaml  view_bot_rviz.rviz
src/my_bot/description/: abdi.urdf  arm.urdf  arm.urdf.xacro  arm_gazebo.urdf.xacro  arm_hardware.urdf  arm_hardware.urdf.xacro  depth_camera.xacro  macros.xacro  robot.urdf.xacro  robot_core.xacro
src/my_bot/launch/: arm_sim.launch.py  demo.launch.py  hardware.launch.py  launch_sim.launch.py  sim.launch.py
src/my_bot/my_bot/: EffortPID.py  PID.py  VelPID.py  amc.py  drivePID.py  ps4_merker_control.py
src/path_router/: CMakeLists.txt  package.xml
src/path_router/src/: path_router.cpp
src/yurs_arm_controller/: CMakeLists.txt  package.xml  yurs_arm_controller.xml  yurs_arm_plugin.xml
src/yurs_arm_controller/include/: visibility_control.h
src/yurs_arm_controller/include/yurs_arm_controller/: validate_yurs_arm_controller_parameters.hpp  visibility_control.h  yurs_arm_controller.hpp  yurs_arm_controllers_base.hpp
src/yurs_arm_controller/src/: doublePID.cpp  yurs_arm_controller.cpp  yurs_arm_controller.hpp  yurs_arm_controller.yaml  yurs_arm_controller_parameters.yaml  yurs_arm_controllers_base.cpp
src/yurs_arm_controller/test/: test_load_yurs_arm_controller.cpp  test_yurs_arm_controller.cpp  test_yurs_arm_controller.hpp  test_yurs_arm_controller_preceeding.cpp  yurs_arm_controller_params.yaml  yurs_arm_controller_preceeding_params.yaml
src/yurs_hardware/: CMakeLists.txt
src/yurs_hardware/include/yurs_hardware/: yurs_motor.hpp
src/yurs_hardware/src/: can_util.hpp  yurs_motor.cpp
src/yurs_velocity_controller/: CMakeLists.txt  package.xml
src/yurs_velocity_controller/src/: velocityPID.cpp  yurs_velocity_controller.cpp
(+125 files in other folders)
