<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_router</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joaquinphilco@hotmail.com">joas329</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
