<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joaquinphilco@hotmail.com">joas329</maintainer>
  <license>TODO: License declaration</license>


  <depend>sensor_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path = "/home/joas329/Desktop/rover_simulation/install/my_bot/share/"/>
  </export>
</package>